# miniosv

./: .gitignore  .gitmodules  CLEANUP_REVIEW.txt  LICENSE  Makefile  README.md  app.cc  claude-sandbox.sh  flake.nix  linux.cc  loader.cc  runtime.cc  usr_ext.manifest.skel  usr_ramfs.manifest.skel  usr_rofs.manifest.skel
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: Makefile  app.cc  exit_shim.cc
app/config_setter/: gui.py
app/shared-headers/: Exceptions.hpp  PerfEvent.hpp  Units.hpp
apps/leanstore/: CMakeLists.txt  Makefile  usr.manifest
apps/leanstore/backend/: CMakeLists.txt
apps/leanstore/backend/leanstore/: Config.cpp  Config.hpp  LeanStore.cpp
apps/leanstore/backend/leanstore/concurrency/: Mean.cpp  Mean.hpp
apps/leanstore/backend/leanstore/concurrency-recovery/: Worker.cpp
apps/leanstore/backend/leanstore/concurrency/batch/: Task.cpp  TaskExecutor.cpp  TaskExecutor.hpp  TaskManager.cpp  TaskManager.hpp
apps/leanstore/backend/leanstore/concurrency/default/: DefaultThreadingManager.cpp  DefaultThreadingManager.hpp
apps/leanstore/backend/leanstore/concurrency/unique/: UniqueBackgroundWork.hpp  UniqueTask.hpp  UniqueTaskExecutor.cpp  UniqueTaskExecutor.hpp  UniqueTaskManager.cpp  UniqueTaskManager.hpp
apps/leanstore/backend/leanstore/concurrency/unique/helper/: ContextPool.cpp  DummyNic.hpp  LatencyTracker.hpp  SystemState.hpp
apps/leanstore/backend/leanstore/concurrency/utils/: SharedConfig.hpp  ThreadBase.cpp  ThreadBase.hpp  YieldLock.cpp  YieldLock.hpp
apps/leanstore/backend/leanstore/io/: IoAbstraction.hpp  IoInterface.cpp  IoInterface.hpp
apps/leanstore/backend/leanstore/io/impl/: LibaioImpl.cpp  Osv.cpp  Osv.hpp  OsvImpl.hpp
apps/leanstore/backend/leanstore/profiling/counters/: CRCounters.hpp  PPCounters.cpp  PPCounters.hpp  SSDCounters.cpp  SSDCounters.hpp  ThreadCounters.hpp
apps/leanstore/backend/leanstore/profiling/tables/: CRTable.hpp  SSDTable.cpp  ThreadTable.cpp
apps/leanstore/backend/leanstore/storage/btree/core/: BTreeGeneric.hpp  BTreeNode.hpp
apps/leanstore/backend/leanstore/storage/buffer-manager/: BufferManager.cpp  BufferManager.hpp  FreeList.hpp  PageProviderThread.cpp  Partition.cpp  Partition.hpp
apps/leanstore/backend/leanstore/sync-primitives/: JumpMU.cpp  Latch.hpp  PageGuard.hpp  PlainGuard.hpp
apps/leanstore/backend/leanstore/threads/: UT.hpp
apps/leanstore/backend/leanstore/utils/: BlockedRange.hpp  Files.cpp  Files.hpp  Misc.cpp  PreallocationStack.hpp  RandomGenerator.hpp  RingBuffer.hpp  UserJumpReasons.hpp
apps/leanstore/frontend/: CMakeLists.txt
apps/leanstore/frontend/mixed/: adapter.hpp  mixed.cpp  mixed_workload.hpp  schema.hpp  types.hpp
apps/leanstore/frontend/tpc-c/: tpcc.cpp
apps/leanstore/frontend/tpc-ch/: tpcc.cpp  tpcc_workload.hpp
apps/leanstore/frontend/ycsb/: ycsb.cpp
arch/aarch64/: arch-cpu.hh  arch-dtb.cc  arch-dtb.hh  arch-elf.hh  arch-interrupt.hh  arch-mmu.hh  arch-pci.hh  arch-perf.hh  arch-setup.cc  arch-switch.hh  arch.hh  arm-clock.cc  boot.S  early-console.cc  early-console.hh  elf-dl.S  entry.S  exceptions.cc  exceptions.hh  gic-common.cc  gic-v2.cc  gic-v3.cc  gic-v3.hh  interrupt.cc  loader.ld  mmu.cc  msi.cc  pci.cc  preboot.S  processor.hh  psci.cc  relocate.cc  safe-ptr.hh  sched.S  signal.cc  smp.cc  tlsdesc.S
arch/x64/: apic-clock.cc  apic.cc  arch-cpu.hh  arch-elf.cc  arch-elf.hh  arch-interrupt.hh  arch-mmu.hh  arch-pci.hh  arch-perf.hh  arch-setup.cc  arch-setup.hh  arch-switch.hh  arch-trace.cc  arch.hh  boot.S  cpuid.cc  cpuid.hh  dmi.cc  dump.cc  entry.S  exceptions.cc  exceptions.hh  hyperv-clock.cc  hypervisor.cc  interrupt.cc  ioapic.cc  loader.ld  mmu.cc  msi.cc  power.cc  processor.hh  pvh-boot.cc  pvh-entry.S  relocate.cc  signal.cc  smp.cc  string-ssse3.cc  string.cc  syscall.hh  tls-switch.hh  (+3 more)
boot/uefi/: efi.hh  kernel-blob.S  stub.cc
bsd/: init.cc
bsd/porting/: bus.h  bus_dma.cc  mmu.cc  netport.cc  netport1.cc  uma_stub.h
compiler/include/: intrinsics.hh
conf/: aarch64.mk  base.mk  config.mk
core/: app.cc  async.cc  callstack.cc  chart.cc  condvar.cc  debug.cc  demangle.cc  dhcp.cc  elf.cc  futex.cc  kprintf.c  leanstore_debug.cc  math.cc  mempool.cc  mmu.cc  nvme.cc  pagecache.cc  per-cpu-counter.cc  percpu-worker.cc  percpu.cc  power.cc  rcu.cc  rwlock.cc  sampler.cc  sched.cc  shutdown.cc  strace.cc  trace.cc
docs/: libc-surface.md  llvm-libc-coverage.md
drivers/: acpi.cc  acpi.hh  ahci.cc  cadence-uart.cc  cadence-uart.hh  clock-common.hh  clock.cc  clock.hh  console-driver.cc  console-driver.hh  console-multiplexer.cc  console-multiplexer.hh  console.cc  console.hh  device.hh  hpet.cc  hypervclock.cc  ide.cc  isa-serial-base.cc  isa-serial-base.hh  isa-serial.cc  isa-serial.hh  kvmclock.cc  line-discipline.cc  line-discipline.hh  mmio-isa-serial.cc  mmio-isa-serial.hh  msi.cc  nvme-queue.cc  nvme-queue.hh  nvme-user-queue.cc  nvme-user-queue.hh  nvme.cc  nvme.hh  pci-function.cc  pci-generic.cc  pl011.cc  pl011.hh  pl031.cc  random.cc  (+18 more)
examples/hello/: Makefile  app.cc
fs/devfs/: devfs_vnops.cc  device.cc
fs/procfs/: procfs_vnops.cc
fs/rofs/: rofs_cache.cc  (+2 more)
libc/: aliases.ld  cxa_thread_atexit.cc  dlfcn.cc  eventfd.cc  io.cc  libc.cc  mman.cc  pipe.cc  pthread.cc  signal.cc  syslog.c
native-example/: app.cc
nix/: README.md  aws-deploy.nix  compiler-rt.nix  default.nix  devshells.nix  libcxx.nix  llvm-libc.nix  llvm-source.nix  miniosv.nix  run.nix  toolchain.nix
scripts/: README.md  audit-libc-surface.py  aws-deploy.py  azure_deploy.py  build  build-compiler-rt.sh  build-libcxx.sh  build-llvm-libc.sh  gcp_deploy.py  gen-ksymtab.py  imgedit.py  loc-compare.sh  loc.sh  mkuefi.sh  osv-version.sh  run.py  setup.py  smoke-test.sh  symbolize.py  test-clang-switch.sh
test/: Makefile  os-features.cc  os-iostream.cc  os-libc.cc  os-membench.cc  os-memmove.cc  os-sched.cc  os-stress.cc  osv_tests.cc
tests/: lib-misc-tls.cc  misc-ctxsw.cc  misc-futex-perf.cc  misc-loadbalance.cc  misc-malloc.cc  misc-mutex2.cc  misc-scheduler.cc  misc-setpriority.cc  misc-tls.cc  tst-pin.cc  tst-pthread-clock.cc
(+220 files in other folders)
